--- a/main.html
+++ b/main.html
@@ -10,6 +10,19 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<h1>GOA</h1>
+	<br>
+	<p>Goa, a tiny emerald land on the west coast of India, the 25th state of the Union states of India, was liberated from Portuguese rule in 1961. It was a part of Union Territory of Goa, Daman & Diu till 30th May 1987 when it was carved out of form a separate state. Goa covers an area of 3702 square kilometers and comprises two Revenue district viz North Goa and South Goa. Boundaries of Goa State are defined in the North Terekhol river which separates it from Maharashtra, in the East and South by Karnataka State and West by Arabian Sea. Goa lies in Western Coast of India and is 594 Km (by road) away from Mumbai city.</p>
+	<ol>
+		<li><b><i>Hollant Beach.</i></b></li>
+		<li><b><i>Velsao Beach.</i></b></li>
+		<li><b><i>Arambol Beach.</i></b></li>
+		<li><b><i>Ashwem Beach.</i></b></li>
+		<li><b><i>Palolem Beach.</i></b></li>
+	</ol>
+	<ul>
+		<li><b><i>fish</i></b></li>
+	</ul>
 
 </body>
 
